<resources>
    <string name="app_name">DriverApplication</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_number">Contact Number</string>
    <string name="school">School</string>
    <string name="student_name">Student Name</string>
    <string name="form_input">Student Data</string>
    <string name="register">Submit</string>
</resources>
